package backend.orders;

/**
 * Enam with all the Order data
 */
public enum OrderData {
    ORDER_ID,
    ENTITY_ID,
    DATE,
    ORDER_ITEMS,
    TOTAL_COST,
    STATUS,
}
