package backend.orders;

/**
 * Enam with all the possible OrderItem details
 */
public enum OrderItemData {
    NAME,
    QUANTITY,
    ITEM_ID,
    COST,
}
