package backend.orders;

/**
 * Enam with all order status
 */
public enum OrderStatus {
    PENDING,
    SHIPPED,
    DELIVERED,
}